...
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/enter_example_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fill form example"
        android:layout_below="@+id/recycler_example_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/dialog_example_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alert dialog example"
        android:layout_below="@+id/enter_example_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
...
